@@ -941,9 +941,10 @@ Variant \variant{1} returns all stored configurations, while variant
 \}
 \end{code}
 
-\section{Statistical analysis}
+\section{Computing averages and errors (deprecated)}
 
-\subsection{Computing averages and errors}
+\warning{The functions in this section are deprecated and will be removed in
+  a future version of \es.}
 
 \begin{essyntax}
   \variant{1} calcObAv \var{file} \var{index} \opt{\var{start}}
@@ -993,6 +994,48 @@ variant \variant{3}, returning just these values as tiny tcl-list.
   \var{error1} \var{error2} \dots
 \}
 \end{code}
+
+\subsection{Plotting observables (deprecated)}
+
+\begin{essyntax}
+  plotObs \var{file} \{ \var{x1}:\var{y1} \var{x2}:\var{y2} \dots \}
+  \opt{titles \{ \var{title1} \var{title2} \dots \}}
+  \opt{labels \{ \var{xlabel} \opt{\var{ylabel}} \}} 
+  \opt{scale \var{gnuplot-scale}}
+  \opt{cmd \var{gnuplot-command}}
+  \opt{out \var{filebase}}
+\end{essyntax}
+Uses \textsc{gnuplot} to create plots of the data in \var{file} and
+writes it to the file \var{filebase}\lit{.ps} (default:
+\var{file}\lit{.ps}). The data in \var{file} should be stored
+column-wise. $\var{x1}, \var{x2} \dots$ and $\var{y1}, \var{y2} \dots$
+denote the columns used for the data of the x- and y-axis,
+respectively.
+
+\begin{arguments}
+\item[\opt{titles \{ \var{title1} \var{title2} \dots \}}] can be used
+  to specify the titles of the different plots
+\item[\opt{labels \{ \var{xlabel} \opt{\var{ylabel}} \}}] will define the
+  labels of the axis. If \var{ylabel} is omitted, the filename
+  \var{file} is used as label for the y-axis.
+\item[\opt{scale \var{gnuplot-scale}}] will define the scaling of the
+  axis (\eg \lit{scale logscale xy}) (default: \lit{nologscale xy})
+\item[\opt{cmd \var{gnuplot-command}}] allows to pass any other
+  commands to gnuplot. For example, use
+  \codebox{plotObs \dots cmd "set key left"} to adjust the titles on
+  the left side.
+\item[\opt{out \var{filebase}}] can be used to change the output
+  file. By default, the plot will be written to \var{file}\lit{.ps}.
+\end{arguments}
+
+\subsection{Joining plots (deprecated)}
+\begin{essyntax}
+  plotJoin \{ \var{source1} \var{source2} \dots \} \var{final}
+\end{essyntax}
+Joins the plot files $\var{source1}, \var{source2}, \dots$ into a
+single file \var{final}, while placing any two files on one page.
+Note that the resulting files may be huge and therefore hard to print!
+
 
 \section{\lit{uwerr}: Computing statistical errors in time series}
 \label{sec:uwerr}
